--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@
   margin-right: 16%; 
 }
 .col-md-3 img{
-  height: 200px;
   width: 200px;
   margin: 20px;
 }
@@ -77,11 +76,14 @@
   margin-top: 30px;
   padding-top: 30px;
 }
-  input[type=text], input[type=email]{
+input[type=text],input[type=email]{
   background: transparent;
-  color: white;
- 
+  /* color: white; */
 }
+input::placeholder{
+  color: white;
+}
+.form-control::-webkit-input-placeholder { color: white; }
 #name{
   width: 30%;
   margin-left: 18%;
@@ -94,6 +96,11 @@
   background: transparent;
   margin-left: 20%;
   width: 60%;
+}
+button{
+  margin-left: 20%;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
 }
 footer{
   text-align: center;
