--- a/css/styles.css
+++ b/css/styles.css
@@ -73,12 +73,12 @@ html{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-left:16%;
+  margin-left:18%;
   margin-right: 16%; 
 }
 .col-md-3 img{
-  width: 200px;
-  margin: 20px;
+  max-width: 100%;
+  max-height: 100%;
 }
 .portfolio h2{
   text-align: center;
@@ -143,8 +143,8 @@ footer p{
 #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
   display: none;
   color: black;
-  width: 200px;
-  height: 164px;
+  width: 100%;
+  height: 100%;
   background-color:rgba(255, 255, 255, 0.456);
   position:absolute;
   top: 20px;
@@ -152,23 +152,24 @@ footer p{
   font-weight: bold;
   text-align: center;
   font-size: 30px;
-  padding-top: 60px;
+  padding-top: 50%;
   font-family: 'Delius Swash Caps', cursive;
 }
-@media only screen and (max-width: 725px){
+@media only screen and (max-width: 755px){
   #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 300px;
-    height: 264px;
+    width: 100%;
+    height: 100%;
     top: 20px;
-    left: 35px;
-    padding-top: 90px;
+    left: 16px;
+    padding-top: 20%;
+    /* font-size: 16px; */
   }
   .col-md-3 img{
-    width: 300px;
+    width:100%px;
     margin: 20px;
   }
   #portfolio{
-    margin-left:10%;
+    margin-left:8%;
     margin-right: 16%; 
   }
   button{
@@ -180,20 +181,75 @@ footer p{
     /* margin-right: -20%; */
   }
 }
+@media only screen and (max-width: 425px){
+  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    width: 100%;
+    height: 100%;
+    top: 20px;
+    left: 16px;
+    padding-top: 20%;
+    font-size: 20px;
+  }
+  .col-md-3 img{
+    width:100%px;
+    margin: 20px;
+  }
+  #portfolio{
+    margin-left:8%;
+    margin-right: 16%; 
+  }
+  button{
+    /* margin-left: 10%; */
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+
+  }
+  #name{
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 20px;
+    /* margin-right: 30px; */
+  }
+  #email{
+    width: 80%;
+    margin-left: 10%;
+  }
+  #comment{
+    margin-left: 10%;
+    width: 80%;
+  }
+}
 @media only screen and (min-width: 825px){
   #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 400px;
-    height: 364px;
+    width: 100%;
+    height: 100%;
     top: 20px;
-    left: 35px;
-    padding-top: 30%;
+    left: 20px;
+    padding-top:30%; 
   }
   .col-md-3 img{
     width: 400px;
     margin: 20px;
   }
   #portfolio{
-    margin-left:18%;
-    margin-right: 16%; 
+    margin-left:10%;
+    margin-right: 10%; 
+  }
+}
+@media only screen and (min-width: 625px){
+  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    width: 100%;
+    height: 100%;
+    top: 20px;
+    left: 20px;
+    padding-top:10%; 
+  }
+  .col-md-3 img{
+    width: 400px;
+    margin: 20px;
+  }
+  #portfolio{
+    margin-left:6%;
+    margin-right: 10%; 
   }
 }
