Add annimation feature to landing page mouse click

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,22 @@ html{
   padding-top : 22px;
   margin-top: 10%;
   padding-bottom: 30px; 
+  /* animation-iteration-count: infinite; */
+}
+#mouse-click {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-40px);
+  }
+  60% {
+    transform: translateY(-35px);
+  }
 }
 
 .about{
